# fairfetched

./: .gitignore  LICENSE  README.md  pyproject.toml
fairfetched/: vis.py
fairfetched/get/: __init__.py  _ensure.py  _utils.py  api.py  chembl.py  papyrus.py
fairfetched/standardisation/: compounds.py
fairfetched/standardization/: _optional.py  compound_fns.py  mol_expr.py  mol_functions.py  pipe.py
fairfetched/standardize/: ___mol_expr.pyi  compound_fns.py  mol_expr.py  mol_functions.py  optional.py  pipe.py  pipeline.py
fairfetched/utils/: __init__.py  _optional.py  _track.py  ensure.py  files.py  main.py  polars.py  storage.py  typing.py
scripts/: chembl.py
tests/: __init__.py  test_ensure.py  test_get.py  test_integration_chembl.py  test_standardise.py  test_standardize.py  test_utils.py
