[project]
name = "fairfetched"
version = "0.0.1-20260204"
description = "data APIs for reproducible data fetching in cheminformatics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.38.1",
    "pystow>=0.7.28",
    "rich>=14.3.3",
]

[project.optional-dependencies]
rdkit = [
    "rdkit>=2025.9.6",
]
standardise = [
    "fairfetched[rdkit]",
    "papyrus-structure-pipeline>=0.0.5",
]
dev = [
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.46",
    "fairfetched[standardise]",
]


[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]


[project.urls]
Homepage = "https://github.com/lucinamay/fairfetched"
