[project]
name = "fairfetched"
version = "0.0.1-20260304"
description = "data APIs for reproducible data fetching in cheminformatics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.38.1",
]

[project.optional-dependencies]
track = ["rich>=14.3.3"]
rdkit = [
    "rdkit>=2025.9.6",
]
standardise = [
    "fairfetched[rdkit]",
    "papyrus-structure-pipeline>=0.0.5",
]
dev = [
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.46",
    "fairfetched[standardise]",
    "rust-just>=1.46.0",
]


[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]


[project.urls]
Homepage = "https://github.com/lucinamay/fairfetched"
