[project]
name = "fairfetched"
version = "0.0.1-20260306"
description = "data APIs for reproducible data fetching in cheminformatics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.38.1",
]

[project.optional-dependencies]
track = ["rich>=14.3.3"]
rdkit = [
    "rdkit>=2025.9.6",
]
standardise = [
    "fairfetched[rdkit]",
    "chembl-structure-pipeline>=1.2.4",
    "papyrus-structure-pipeline>=0.0.5",
]
dev = [
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.46",
    "fairfetched[standardise]",
    "rust-just>=1.46.0",
]


[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.workspace]
members = [
    ".",
    ".",
]

[tool.uv.sources]
fairfetched = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "fairfetched",
    "pytest>=9.0.2",
    "rust-just>=1.46.0",
]


[project.urls]
Homepage = "https://github.com/lucinamay/fairfetched"
